--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MYSQL_ROOT_PASSWORD=rootpassword
-MYSQL_DATABASE=mydatabase
-MYSQL_USER=root
+MYSQL_ROOT_PASSWORD=haslo
+MYSQL_DATABASE=notes_db
+MYSQL_USER=db
 MYSQL_PASSWORD=rootpassword
